--- a/crates/dodgy_3d/Cargo.toml
+++ b/crates/dodgy_3d/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.4.0"
 description = "An implementation of ORCA, a local collision avoidance algorithm for 3D."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-license = "MIT"
+license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/andriyDev/dodgy"
 
