--- a/crates/dodgy_3d/Cargo.toml
+++ b/crates/dodgy_3d/Cargo.toml
@@ -16,3 +16,7 @@ keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]
 [dependencies]
 glam = "0.29.1"
 rand = "0.8.5"
+
+[features]
+# Allows access to some of the internal data used to generate the final suggested velocity.
+debug = []
